deploy_nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2018-02-22T22:26:06Z
  generation: 1
  labels:
    run: nginx4
  name: nginx4
  namespace: default
  resourceVersion: "133182"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/nginx2
  uid: 601122f7-181f-11e8-9618-42010a8e0002
spec:
  replicas: 5
  selector:
    matchLabels:
      run: nginx4
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: nginx4
        dc: UK
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      nodeSelector:
        disk: hdd
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-02-22T22:26:07Z
    lastUpdateTime: 2018-02-22T22:26:07Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 3
  updatedReplicas: 1
