hog.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2018-02-20T23:39:21Z
  generation: 1
  labels:
    run: hog
  name: hog
  namespace: default
  resourceVersion: "15632"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/hog
  uid: 46cddaf0-1697-11e8-a0d7-42010a8e0002
spec:
  replicas: 1
  selector:
    matchLabels:
      run: hog
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: hog
    spec:
      containers:
      - image: vish/stress
        imagePullPolicy: Always
        name: hog
        resources:
          limits:
            memory: 128Mi
            cpu: "1" 
          requests:
            memory: 120Mi
            cpu: "0.5"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-02-20T23:39:21Z
    lastUpdateTime: 2018-02-20T23:39:21Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
